댓글 삽입,수정,삭제,리스트 ajax 수정, 보완

--- a/demo/src/main/webapp/WEB-INF/views/view.html
+++ b/demo/src/main/webapp/WEB-INF/views/view.html
@@ -8,6 +8,21 @@
 <head>
 <meta charset="UTF-8">
 <title>VIEW</title>
+<style type="text/css"> 
+
+.comment_List {
+	list-style : none;
+	
+}
+.comment_info {
+	height : 150px;
+	
+}
+
+
+
+
+</style>
 <link rel="stylesheet" href="/css/bootstrap.min.css">
 
 </head>
@@ -55,8 +70,10 @@
 				<li class="list-group-item" th:text="${result.writer}"></li>
 
 			</ul>
-			<div class="card-footer text-muted" th:text="${#dates.format(result.board_date,'yyyy-MM-dd')}"></div>
+			<div class="card-footer text-muted"
+				th:text="${#dates.format(result.board_date,'yyyy-MM-dd')}"></div>
 		</div>
+
 		<br>
 		<div style="text-align: center">
 			<input type="button" class="btn btn-primary" value="RETURN"
@@ -70,7 +87,7 @@
 		<legend style="text-align: left;">COMMENT</legend>
 		<br>
 		<form id="contentForm" name="contentForm" method="post">
-			<div style="width: 490px; border-top: 1px solid gold;">
+			<div style="width: 100%; border-top: 1px solid gold;">
 				<br>
 				<textarea class="form-control" id="commentContent"
 					name="commentContent" rows="8" cols="50"></textarea>
@@ -78,97 +95,121 @@
 			</div>
 			<br>
 			<div style="text-align: center">
-			<input type="button" class="btn btn-primary" value="SUBMIT"
-				th:attr="onclick=|javascript:commentInsert();|">
-				</div>
-		</form>
-		<br>
-		<div>comment list</div>
-		<form id='commentList' name='commentList' method='post'>
-			<div id="commentDiv" name="commentDiv">
-				<table class="table table-hover">
-					
-					<thead>
-					<tr>
-						<th scope="col">No</th>
-						<th scope="col" style="text-align: center;">Content</th>
-					</tr>
-					</thead>
-					<tbody>
-					<tr th:each="data,iterStat: ${commentList.commentList}">
-
-						<td th:text="${iterStat.index+1}" ></td>
-						<td name="commentContent" th:id="${data.cno}"
-							th:text="${data.commentContent}"></td>
-						<td><input type="button" class="btn btn-primary btn-sm" id="deleteComment" value="delete"
-							th:attr="onclick=|javascript:commentDelete('${data.cno}');|"></td>
-						<td><input type="button" class="btn btn-primary btn-sm" th:id="|update${data.cno}|" value="modify"
-							th:attr="onclick=|javascript:commentUpdate('${data.cno}');|"  ></td>
-					</tr>
-					</tbody>
-				</table>
+				<input type="button" class="btn btn-primary" value="SUBMIT"
+					th:attr="onclick=|javascript:commentInsert();|">
 			</div>
 		</form>
+		<br>
+		
+		<legend style="text-align: left;">COMMENT LIST</legend>
+		<hr>
+		<div id="commentDiv"></div>
 	</div>
+	<div class="block_space" style="width: 100%; height: 150px; margin: auto;"> 
+	</div>
+
 
 
 	<th:block layout:fragment="script">
 		<script src="http://code.jquery.com/jquery-3.4.1.min.js"></script>
 		<script type="text/javascript">
+		
+		$(document).ready(function(){
+			showCommentList();
+		});
+		
+		function showCommentList(){
+			
+			var data = "bno=" + [[${result.id}]];
+			console.log(data);
+			$.ajax({
+				type : "POST",
+				dataType : 'json',
+				url :	'[[@{/showCommentList}]]',
+				data : data,
+				success : function(data) {
+					
+						var str = "";
+
+						str += "<ul>";
+
+						var result = data.resultList;
+
+						for (var i = 0; i < result.length; i++) {
+							var date = new Date(result[i].commentDate);
+							var dateFormat = getFormatDate(date);
+							var bno = result[i].bno;
+							var cno = result[i].cno;
+							var comment = result[i].commentContent;
+							
+							
+							str += "<li class='comment_List'>" 
+									+ "<div class='comment_info' id='cno" + result[i].cno +"'>" 
+									+ "<div class='comment_date'>"
+									+ "<span class='commentDate'>" 
+									+ dateFormat
+									+ "</span>"
+									+ "</div>"
+									+ "<div class='comment_control'>"
+									+ "<a href='javascript:void(0)' onclick=\"editForm('"
+									+ bno	+ "','"
+									+ cno + "','"
+									+ comment + "'"
+									+ ");\" > 수정 | </a>"
+									+ "<a href='javascript:void(0)' onclick=\"commentDelete('"
+									+ bno	+ "','"
+									+ cno	+ "'"
+									+ ");\" >삭제</a>"
+									+ "</div>"
+									+ "<div>"
+									+ "<p>"
+									+ result[i].commentContent
+									+ "</p>"
+									+ "</div>"
+									+ "</div>"
+									+ "<hr>"
+									+"</li>"
+						}
+						str += "</ul>";
+
+						$('#commentDiv').html(str);
+						$('#commentContent').val("");
+						
+					}	
+			});
+		}
+		
+		function editForm(bno, cno, content) {
+			console.log(bno + " " +cno + " " + content);
+			var str = "";
+			str = '<textarea id="updateText" rows="8" cols="50" >'
+			+ content 
+			+'</textarea>'
+			+ '<a href="javascript:void(0)" onclick="commentUpdate('
+			+ bno	+ ","
+			+ cno 
+			+ ');" > 수정 | </a>'
+			+ '<a href="javascript:void(0)" onclick="showCommentList();" >취소</a>'
+			+ '<hr>';
+			
+			$('#cno'+cno).replaceWith(str);
+			$('#cno'+cno + '#updateText').focus();
+		}
+		
 			function commentInsert() {
 
 				var data = $('#contentForm').serialize();
 				console.log(data);
-				$
-						.ajax({
+				$.ajax({
 							type : "POST",
 							dataType : 'json',
 							url : '[[@{/new}]]',
 							data : data,
 							success : function(data, status, xhr) {
 								console.log(data);
-								if (data.flag === "success") {
-									$('#commentDiv').empty();
-
-									var str = "";
-
-									str += "<table class=\"table table-hover\">"
-											+ "<thead>"
-											+ "<tr>"
-											+ "<th scope=\"col\">No</th>"
-											+ "<th scope=\"col\" style=\"text-align:center;\">Content</th>"
-											+ "</tr>";
-											+ "</thead>"
-
-									var result = data.resultList;
-
-									for (var i = 0; i < result.length; i++) {
-										str += "<tbody>"
-												+ "<tr>"
-												+ "<td>"
-												+ (i + 1)
-												+ "</td>"
-												+ "<td name ='commentContent' id="
-												+ result[i].cno
-												+">"
-												+ result[i].commentContent
-												+ "</td>"
-												+ "<td><input type='button' class=\"btn btn-primary btn-sm\" id='deleteComment' value='delete' onclick=\"commentDelete('"
-												+ result[i].cno
-												+ "');\" ></td>"
-												+ "<td><input type='button' class=\"btn btn-primary btn-sm\" id='update" + result[i].cno +"' value='modify' onclick=\"commentUpdate('"
-												+ result[i].cno
-												+ "');\"  ></td>" + "</tr>"
-												+ "</tbody>"
-
-									}
-									str += "</table>";
-
-									$('#commentDiv').append(str);
-									$('#commentContent').val("");
-
+								if(data.flag == "success"){
+								showCommentList();
 								}
-
 							},
 							error : function(jqXHR, textStatus, errorThrown) {
 								alert(jqXHR.responseText);
@@ -176,62 +217,20 @@
 						});
 			}
 
-			function commentDelete(cno) {
+			function commentDelete(bno, cno) {
 
-				var data = 'cno=' + cno;
-				console.log(data);
-
-				$
-						.ajax({
+				var data ="bno="+ bno + '&cno=' + cno;
+				console.log(bno,cno);
+				
+				$.ajax({
 							type : "DELETE",
 							dataType : 'json',
-							url : '[[@{/__${result.id}__}]]',
+							url : '[[@{/delete}]]',
 							data : data,
 							success : function(data, status, xhr) {
 								console.log(data);
 								if (data.flag === "success") {
-									$('#commentDiv').empty();
-
-									var str = "";
-
-									str += "<table class=\"table table-hover\">"
-										+ "<thead>"
-										+ "<tr>"
-										+ "<th scope=\"col\">No</th>"
-										+ "<th scope=\"col\" style=\"text-align:center;\">Content</th>"
-										+ "</tr>";
-										+ "</thead>"
-
-									var result = data.resultList;
-
-									console.log(result);
-
-									for (var i = 0; i < result.length; i++) {
-										str += "<tbody>"
-												+"<tr>"
-												+ "<td>"
-												+ (i + 1)
-												+ "</td>"
-												+ "<td name ='commentContent' id="
-												+ result[i].cno
-												+">"
-												+ result[i].commentContent
-												+ "</td>"
-												+ "<td><input type='button' class=\"btn btn-primary btn-sm\" id='deleteComment' value='delete' onclick=\"commentDelete('"
-												+ result[i].cno
-												+ "');\" ></td>"
-												+ "<td><input type='button' class=\"btn btn-primary btn-sm\" id='update" + result[i].cno
-												+ "' value='modify' onclick=\"commentUpdate('"
-												+ result[i].cno + "');\"></td>"
-												+ "</tr>"
-												+ "</tbody>";
-
-									}
-									str += "</table>";
-
-									$('#commentDiv').append(str);
-									$('#commentContent').val("");
-
+									showCommentList();
 								}
 							},
 							error : function(jqXHR, textStatus, errorThrown) {
@@ -240,84 +239,42 @@
 						});
 			}
 
-		function commentUpdate(cno) {
-					var selectComment = "#" + cno;
-					var str="";
-					var modifyComment=$(selectComment);
-					var modifyButtonId="#update" + cno;
-					var button = $(modifyButtonId)
-					console.log(modifyComment);
-					var originalComment=modifyComment.text();
-
-					str = '<td><input type="text" id="updateText" value="'+originalComment+'"  ></td>'
-						+ '<td><input type="button" id="doUpdateComment" value="modify" class="btn btn-primary btn-sm"></td>';
-					$(button).hide();
-					$(modifyComment).replaceWith(str);
+			function commentUpdate(bno, cno) {
 					
-						 $("#doUpdateComment").one("click", function() {
-							 
-							 var data ="commentContent=" + $("#updateText").val() + "&cno=" + cno;
-							 console.log(data);
-							
-							$.ajax({
-								type : "POST",
-								dataType : 'json',
-								url : '[[@{/__${result.id}__}]]',
-								data : data,
-								success : function(data, status, xhr) {
+									var content = $('#updateText').val();
+									var data = "commentContent="
+											+ content +"&bno=" + bno + "&cno="
+											+ cno;
 									console.log(data);
-									if (data.flag === "success") {
-										$('#commentDiv').empty();
 
-										var str = "";
+									$.ajax({
+												type : "POST",
+												dataType : 'json',
+												url : '[[@{/update}]]',
+												data : data,
+												success : function(data,
+														status, xhr) {
+													console.log(data);
+													if (data.flag === "success") {
+														showCommentList();
 
-										str += "<table class=\"table table-hover\">"
-											+ "<thead>"
-											+ "<tr>"
-											+ "<th scope=\"col\">No</th>"
-											+ "<th scope=\"col\" style=\"text-align:center;\">Content</th>"
-											+ "</tr>";
-											+ "</thead>"
+													}
+												},
+												error : function(jqXHR,
+														textStatus, errorThrown) {
+													alert(jqXHR.responseText);
+												}
+											});
+			}
 
-										var result = data.resultList;
-
-										console.log(result);
-
-										for (var i = 0; i < result.length; i++) {
-											str += "<tbody>"
-													+"<tr>"
-													+ "<td>"
-													+ (i + 1)
-													+ "</td>"
-													+ "<td name ='commentContent' id="
-													+ result[i].cno
-													+">"
-													+ result[i].commentContent
-													+ "</td>"
-													+ "<td><input type='button' class=\"btn btn-primary btn-sm\" id='deleteComment' value='delete' onclick=\"commentDelete('"
-													+ result[i].cno
-													+ "');\" ></td>"
-													+ "<td><input type='button' class=\"btn btn-primary btn-sm\" id='update"+result[i].cno +"' value='modify' onclick=\"commentUpdate('"
-													+ result[i].cno + "');\"></td>"
-													+ "</tr>"
-													+ "</tbody>";
-
-										}
-										str += "</table>";
-
-										$('#commentDiv').append(str);
-										$('#commentContent').val("");
-
-									}
-								},
-								error : function(jqXHR, textStatus, errorThrown) {
-									alert(jqXHR.responseText);
-								}
-							});
-						}); 
-					}
-		
-
+			function getFormatDate(date) {
+				var year = date.getFullYear();
+				var month = (1 + date.getMonth());
+				month = month >= 10 ? month : '0' + month;
+				var day = date.getDate();
+				day = day >= 10 ? day : '0' + day;
+				return year + '-' + month + '-' + day;
+			}
 		</script>
 	</th:block>
 
